app/styles/_core.less
/* ... */
.label + .label {
  margin-left: 3px;
}

.template-message {
  background-color: #d9edf7;
  border-color: #31708f;
  border-style: solid;
  border-width: 1px;
  color: black;
  .resource-description {
    margin-bottom: 0;
    font-family: @font-family-monospace;
    // Consistent font-size with the CLI examples in code blocks below the template message.
    font-size: (@font-size-base - 1);
  }
}

.resource-description {
  margin-bottom: (@grid-gutter-width / 2);
  .pre-wrap();
  .word-break();
}
.resource-metadata {
  margin-bottom: (@grid-gutter-width / 2);
}

// Misc
// TODO: pull out into _partials where it makes sense
// --------------------------------------------------
.action-inline {
  margin-left: @action-link-inline-margin;
  font-size: @font-size-small;
  i.pficon, i.fa {
    color: @btn-default-color;
    margin-right: 5px;
  }
}

a.subtle-link {
  color: @gray-light;
  border-bottom: 1px dotted #BBB;

  &:hover, &:active, &:focus {
    color: @link-hover-color;
    border-bottom: 1px dotted @link-hover-color;
    text-decoration: none;
  }
}

.tasks {
  margin-bottom: 20px;
  padding-left: 15px;
  padding-right: 15px;
  padding-bottom: 10px;
  background-color: #ffffff;
  &.success {
    border: 1px solid #3f9c35;
    border-left: 3px solid #3f9c35;
  }
  &.failure {
    border: 1px solid #cc0000;
    border-left: 3px solid #cc0000;
  }
  .task-icon {
    font-size: 45px;
    position: absolute;
  }
  .task-content {
    min-height: 45px;
  }
  .task-info {
    margin-left: 55px;
  }
}

label.required:before {
  content: '*';
  position: absolute;
  left: 10px;
}

.btn-xs {
  padding: 0 4px;
}
.btn-lg, .btn-group-lg > .btn {
  line-height: 1.334; // needed to make same height as inputs
}

code {
  white-space: normal;
}

pre,
div {
  &.code {
    background-color: #fff;
    border: none;
    border-left: 2px solid rgb(204, 204, 204);
  }
}

div.code {
  &:extend(pre);
}

[data-toggle="tooltip"] {
  cursor: pointer; // so tooltips get correct cursor
}

// Fix to override the Firefox 40+ behavior to add text-decoration
// No other browser does this.
abbr[data-original-title], abbr[title] {
  text-decoration: none;
}

.dl-horizontal {
  &.left {
    dt {
      text-align: left;
    }
  }
  &.indent {
    margin-left: (@grid-gutter-width / 2); // 20px
  }
  dd {
    &:extend(.clearfix all); // Including this here because it's not being set even though it's in /bootstrap/less/type.less dunno why?
  }
}

.gutter-top-bottom {
  padding: @grid-gutter-width / 2 0;
  &.gutter-top-bottom-2x {
    padding: @grid-gutter-width 0;
  }
}
.gutter-top {
  padding-top: @grid-gutter-width / 2;
  &.gutter-top-2x {
    padding-top: @grid-gutter-width;
  }
}
.gutter-bottom {
  padding-bottom: @grid-gutter-width / 2;
  &.gutter-bottom-2x {
    padding-bottom: @grid-gutter-width;
  }
}

select:invalid {
    box-shadow: none;
}

.truncate {
  // Bootstrap mixin
  // Note: If truncating within a flex container then the parent needs a width
  .text-overflow();
}

.nowrap {
  white-space: nowrap;
}

.well > {
  h1, h2, h3, h4, h5 {
    &:first-child {
      margin: 5px 0 15px;
    }
  }
}

.spinner.spinner-xs { // set height & width to 12px so that FF displays correctly
  height: 12px;
  width: 12px;
}

.spinner.spinner-inverse {
  border-color: rgba(0,153,211, .25);
  border-top-color: rgba(0,153,211, .75);
}

.attention-message {
  background-color: lighten(@brand-primary, 50%);
  border: 1px solid darken(@brand-primary, 10%);
  position: absolute;
  left: 50%;
  margin-top: 100px;
  transform: translateX(-50%);
  padding: 1em 1em 2em;
  min-width: 85%;
  h1,p {
    text-align: center;
  }
  p {
    max-width: 70em;
    margin: auto;
  }
}
.learn-more-block {
  display: block;
  font-size: @font-size-small;
  font-weight: normal;
}

.learn-more-inline {
  display: inline;
  font-size: @font-size-small;
  font-weight: normal;
  margin-left: 5px;
}

.short-id {
  background-color: #f1f1f1;
  color: #666;
}

.input-number {
  width: 60px;
}

.alert {
  margin-bottom: 14px;
  margin-top: 7px;
  code {
    // alerts have a clashing background color. Inherit the background and
    // remove padding, which looks strange without the background color.
    background-color: inherit;
    padding: 0;
  }
  .close {
    margin-left: 5px;
  }
}

.action-button {
  color: @gray-light;
  cursor: pointer;
  &:hover, &:active, &:focus {
    color: #000;
  }
}

a.action-button {
  &:hover, &:active, &:focus {
    text-decoration: none;
  }
}

// Use with aria-disabled="true" and role="button"
a.disabled-link {
  color: #bbbbbb;
  cursor: not-allowed;
  opacity: 0.4;
  &:hover, &:active, &:focus {
    color: #bbbbbb;
    text-decoration: none;
  }
}

.actions-dropdown-btn {
  margin-left: 5px;
}

.actions-dropdown-kebab {
  .action-button;
  // Bigger click target for the dropdown icon, which is a narrow ellipsis
  padding: 0 10px;
  vertical-align: middle;
}

.modal-resource-action {
  background-color: @gray-lighter;
  h1 {
    font-size: 21px;
    font-weight: 500;
    margin-bottom: 20px;
    .word-break();
  }
  p {
    font-size: @font-size-large + 1;
  }
}

// Disable numeric highlighting in YAML and Dockerfile modes because of bugs
.editor.yaml-mode .ace_constant.ace_numeric, .ace_editor.dockerfile-mode .ace_constant.ace_numeric {
  color: inherit;
}

.create-secret-modal {
  background-color: #F5F5F5;
  .modal-footer{
    margin-top: 0px
  }
  .modal-body {
    padding: 0px 18px;
  }
}

.secret-data {
  max-width: 450px;
  max-height: 150px;
  @media (max-width: @screen-sm-max) {
    // The `table-responsive` div adds a 100% border. Make sure the table is at
    // least 100% to avoid a white block at some screen sizes.
    max-width: 100%;
  }
}

.create-secret-editor {
  height: 150px;
}
/* ... */

